--- a/style.css
+++ b/style.css
@@ -54,8 +54,10 @@ img {
   border-style: solid solid none solid;
   border-width: 4px;
   border-color: #ba0001;
+  border-collapse: collapse;
   font-family: Arial, Sans-Serif;
   font-weight: bold;
+  width: 1150px;
 }
 
 .drrm {
@@ -73,8 +75,10 @@ img {
   border-style: none solid solid solid;
   border-width: 4px;
   border-color: #ba0001;
+  border-collapse: collapse;
   font-family: Courier New, Monospace;
   font-weight: bold;
+  width: 1150px;
 }
 
 .subjects {
@@ -84,7 +88,7 @@ img {
 }
 
 .subjects td {
-  padding: 0px 30px;
+  padding: 0px 40px;
 }
 
 #subsec {
@@ -157,4 +161,12 @@ td {
 
 #red {
   color: #ba0001;
+}
+
+tr.hvr:nth-child(even) {
+  background-color: #ECECEC
+}
+
+tr.hvr:hover, tr.drr:hover{
+  background-color: #D9DDDC;
 }
